Add language switcher to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>MisiPal App 使用者服務條款</title>
 </head>
 <body>
+     <div class="lang-switch">
+        <strong>Languages:</strong> 
+        <a href="index.html">English</a> | 
+        日本語 | 
+        <a href="term-of-use-zh.html">繁體中文</a>
+    </div>
     <h1>MisiPal App 使用者服務條款</h1>
     
     <p><strong>生效日期：</strong> [請在此填寫實際生效或更新日期，例如：2025年11月20日]</p>
