Update language links in index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
      <div class="lang-switch">
         <strong>Languages:</strong> 
-        <a href="index.html">English</a> | 
-        日本語 | 
-        <a href="term-of-use-zh.html">繁體中文</a>
+        <a href="term-of-use-en.html">English</a> | 
+        <a href="term-of-use-ja.html">日本語</a> | 
+        繁體中文
     </div>
     <h1>MisiPal App 使用者服務條款</h1>
     
