Add language switcher to term-of-use-ja.html
Added language switcher for English and Traditional Chinese.

--- a/term-of-use-ja.html
+++ b/term-of-use-ja.html
@@ -6,6 +6,13 @@
     <title>MisiPal App 利用規約</title>
 </head>
 <body>
+    <div class="lang-switch">
+        <strong>Languages:</strong> 
+        <a href="term-of-use-en.html">English</a> | 
+        日本語 | 
+        <a href="index.html">繁體中文</a>
+    </div>
+    
     <h1>MisiPal App 利用規約</h1>
     
     <p><strong>発効日：</strong> [実際の発効日または更新日を記入してください。例：2025年11月20日]</p>
