Add language switcher to terms of service page

--- a/term-of-use-en.html
+++ b/term-of-use-en.html
@@ -6,6 +6,13 @@
     <title>MisiPal App Terms of Service</title>
 </head>
 <body>
+    <div class="lang-switch">
+        <strong>Languages:</strong> 
+        English | 
+        <a href="term-of-use-ja.html">日本語</a> | 
+        <a href="index.html">繁體中文</a>
+    </div>
+    
     <h1>MisiPal App Terms of Service</h1>
     
     <p><strong>Effective Date:</strong> [Insert Actual Effective or Updated Date, e.g., November 20, 2025]</p>
