--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b>Languages:</b> <a href="file:///Users/chi-hungwu/Desktop/Apple%20developer/MisiPal/term%20of%20use/term-of-use-en.html"><span class="s2">English</span></a> | <a href="file:///Users/chi-hungwu/Desktop/Apple%20developer/MisiPal/term%20of%20use/term-of-use-ja.html"><span class="s2">日本語</span></a> | 繁體中文</span></p>
+  <div class="lang-switch">
+        <strong>Languages:</strong> 
+        <a href="term-of-use-en.html">English</a> | 
+        <a href="term-of-use-ja.html">日本語</a> | 
+        繁體中文
+    </div>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>MisiPal App 使用者服務條款</b><b></b></span></h1>
 <p class="p3"><span class="s1"><b>生效日期：</b> 2025年11月19日</span></p>
 <p class="p3"><span class="s1">歡迎使用 米西寶 行動應用程式（下稱「本 App」或「服務」），本服務由 CHI HUNG WU（下稱「我們」）提供。在使用本 App 之前，請您務必仔細閱讀並同意本《使用者服務條款》（下稱「本條款」）。您下載、安裝或使用本 App 的行為，即表示您已同意接受本條款的所有內容。</span></p>
