Update language switch section in terms of use

--- a/term-of-use-ja.html
+++ b/term-of-use-ja.html
@@ -14,7 +14,12 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b>Languages:</b> <a href="file:///Users/chi-hungwu/Desktop/Apple%20developer/MisiPal/term%20of%20use/term-of-use-en.html"><span class="s2">English</span></a> | 日本語 | <a href="file:///Users/chi-hungwu/Desktop/Apple%20developer/MisiPal/term%20of%20use/index.html"><span class="s2">繁體中文</span></a></span></p>
+<div class="lang-switch">
+        <strong>Languages:</strong> 
+        <a href="term-of-use-en.html">English</a> | 
+        日本語 | 
+        <a href="index.html">繁體中文</a>
+    </div>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>MisiPal App 利用規約</b><b></b></span></h1>
 <p class="p3"><span class="s1"><b>発効日：</b> 2025年11月19日</span></p>
 <p class="p3"><span class="s1">MisiPal モバイルアプリケーション（以下「本 App」または「本サービス」）へようこそ。本サービスは CHI HUNG WU（以下「当社」）によって提供されています。本 App を利用する前に、この利用規約（以下「本規約」）をよくお読みになり、同意してください。本 App をダウンロード、インストール、または利用することにより、お客様は本規約のすべての条項に拘束されることに同意したものとみなされます。</span></p>
