--- a/term-of-use-en.html
+++ b/term-of-use-en.html
@@ -15,7 +15,12 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b>Languages:</b> English | <a href="file:///Users/chi-hungwu/Desktop/Apple%20developer/MisiPal/term%20of%20use/term-of-use-ja.html"><span class="s2">日本語</span></a> | <a href="file:///Users/chi-hungwu/Desktop/Apple%20developer/MisiPal/term%20of%20use/index.html"><span class="s2">繁體中文</span></a></span></p>
+<div class="lang-switch">
+        <strong>Languages:</strong> 
+        English | 
+        <a href="term-of-use-ja.html">日本語</a> | 
+        <a href="index.html">繁體中文</a>
+    </div>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>MisiPal App Terms of Service</b><b></b></span></h1>
 <p class="p3"><span class="s1"><b>Effective Date:</b> November 19, 2025]</span></p>
 <p class="p3"><span class="s1">Welcome to the MisiPal mobile application (the "App" or "Service"), provided by CHI HUNG WU ("we," "our," or "us"). Before using the App, please carefully read and agree to these Terms of Service (the "Terms"). By downloading, installing, or using the App, you agree to be bound by all the provisions of these Terms.</span></p>
