--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p class="p3"><span class="s1"><b>生效日期：</b> 2025年11月19日</span></p>
 <p class="p3"><span class="s1">歡迎使用 米西寶 行動應用程式（下稱「本 App」或「服務」），本服務由 CHI HUNG WU（下稱「我們」）提供。在使用本 App 之前，請您務必仔細閱讀並同意本《使用者服務條款》（下稱「本條款」）。您下載、安裝或使用本 App 的行為，即表示您已同意接受本條款的所有內容。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>1. 服務的性質和使用許可</b><b></b></span></h2>
-<p class="p3"><span class="s1"><b>1.1 服務目的：</b> 本 App 主要提供 [請根據 App 實際功能填寫，例如：遊戲抽卡模擬計算、概率分析、個人記錄管理、工具輔助] 等功能。本 App 提供的所有計算結果、分析資料或建議，僅供使用者個人參考、娛樂與研究之用。</span></p>
+<p class="p3"><span class="s1"><b>1.1 服務目的：</b> 本 App 主要提供 遊戲抽卡模擬計算、機率分析、抽卡記錄管理 等功能。本 App 提供的所有計算結果、分析資料或建議，僅供使用者個人參考、娛樂與研究之用。</span></p>
 <p class="p3"><span class="s1"><b>1.2 使用許可：</b> 我們授予您個人的、非獨家、不可轉讓、可撤銷的有限許可，允許您在您擁有或控制的 Apple 裝置上下載和使用本 App，並嚴格遵守本條款和 Apple App Store 的服務條款。</span></p>
 <p class="p3"><span class="s1"><b>1.3 使用限制：</b> 您不得將本 App 用於任何非法或本條款禁止的目的。特別是，您不得對本 App 進行反向工程、重製、散佈、出售或出租。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>2. 免責聲明（重要）</b><b></b></span></h2>
