--- a/term-of-use-ja.html
+++ b/term-of-use-ja.html
@@ -24,7 +24,7 @@
 <p class="p3"><span class="s1"><b>発効日：</b> 2025年11月19日</span></p>
 <p class="p3"><span class="s1">MisiPal モバイルアプリケーション（以下「本 App」または「本サービス」）へようこそ。本サービスは CHI HUNG WU（以下「当社」）によって提供されています。本 App を利用する前に、この利用規約（以下「本規約」）をよくお読みになり、同意してください。本 App をダウンロード、インストール、または利用することにより、お客様は本規約のすべての条項に拘束されることに同意したものとみなされます。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>1. サービスの内容と利用許諾</b><b></b></span></h2>
-<p class="p3"><span class="s1"><b>1.1 サービス目的：</b> 本 App は主に [App の実際の機能に基づいて記入してください。例：ガチャシミュレーション計算、確率分析、個人記録管理、ユーティリティサポート] などの機能を提供します。本 App が提供するすべての計算結果、分析データ、または提案は、ユーザー個人の参考、エンターテイメント、および研究目的のみを意図しています。</span></p>
+<p class="p3"><span class="s1"><b>1.1 サービス目的：</b> 本 App は主に ガチャシミュレーション計算、確率分析、個人記録管理 などの機能を提供します。本 App が提供するすべての計算結果、分析データ、または提案は、ユーザー個人の参考、エンターテイメント、および研究目的のみを意図しています。</span></p>
 <p class="p3"><span class="s1"><b>1.2 利用許諾：</b> 当社は、お客様が所有または管理する Apple デバイス上で本 App をダウンロードおよび利用するための、個人的、非独占的、譲渡不能、取消可能な限定的なライセンスをお客様に付与します。利用は本規約および Apple App Store のサービス利用規約に厳密に従うものとします。</span></p>
 <p class="p3"><span class="s1"><b>1.3 利用制限：</b> お客様は、本 App を違法な目的、または本規約で禁止されている目的に使用してはなりません。特に、本 App のリバースエンジニアリング、複製、配布、販売、または賃貸を行ってはなりません。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>2. 免責事項（重要）</b><b></b></span></h2>
