--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="term-of-use-ja.html">日本語</a> | 
         繁體中文
     </div>
-<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>MisiPal App 使用者服務條款</b><b></b></span></h1>
+<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>米西寶 App 使用者服務條款</b><b></b></span></h1>
 <p class="p3"><span class="s1"><b>生效日期：</b> 2025年11月19日</span></p>
 <p class="p3"><span class="s1">歡迎使用 米西寶 行動應用程式（下稱「本 App」或「服務」），本服務由 CHI HUNG WU（下稱「我們」）提供。在使用本 App 之前，請您務必仔細閱讀並同意本《使用者服務條款》（下稱「本條款」）。您下載、安裝或使用本 App 的行為，即表示您已同意接受本條款的所有內容。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>1. 服務的性質和使用許可</b><b></b></span></h2>
@@ -41,7 +41,7 @@
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>5. 責任限制</b><b></b></span></h2>
 <p class="p3"><span class="s1">在適用法律允許的最大範圍內，對於因使用或無法使用本 App 而引起的任何直接、間接、偶然、特殊、懲罰性或衍生性的損害（包括但不限於利潤損失、資料丟失或業務中斷），我們不承擔任何責任，即使我們已被告知發生此類損害的可能性。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>6. 爭議解決與準據法</b><b></b></span></h2>
-<p class="p3"><span class="s1">本條款應受 中華民國（台灣）]法律管轄和解釋。因本條款引起或與之相關的任何爭議，均應提交至 臺灣新竹地方法院 解決。</span></p>
+<p class="p3"><span class="s1">本條款應受 中華民國（台灣）法律管轄和解釋。因本條款引起或與之相關的任何爭議，均應提交至 臺灣新竹地方法院 解決。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>7. 條款修訂</b><b></b></span></h2>
 <p class="p3"><span class="s1">我們保留隨時自行決定修訂或替換本條款的權利。如果修訂內容重大，我們將盡力在修訂生效前至少 30 天發出通知。在修訂生效後繼續使用本 App，即表示您同意接受修訂後的條款。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>8. 聯絡我們</b><b></b></span></h2>
