Swap language order in terms of use page

--- a/term-of-use-en.html
+++ b/term-of-use-en.html
@@ -17,8 +17,8 @@
 <body>
 <div class="lang-switch">
         <strong>Languages:</strong> 
-        <a href="term-of-use-ja.html">English</a> | 
-        日本語 | 
+        <a href="term-of-use-ja.html">日本語</a> | 
+        English | 
         <a href="index.html">繁體中文</a>
     </div>
 <h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 14.0px Helvetica; -webkit-text-stroke: #000000"><span class="s1"><b>MisiPal App Terms of Service</b><b></b></span></h1>
